index: fix z-index

--- a/src/index.scss
+++ b/src/index.scss
@@ -56,11 +56,10 @@ section#case-studies {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 0;
 }
 
 .intro {
-  z-index: 1;
+  z-index: 0;
   width: 50%;
   min-width: 40rem;
 
@@ -85,7 +84,7 @@ section#case-studies {
 }
 
 .earth-graphic {
-  z-index: 1;
+  z-index: 0;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
@@ -117,6 +116,7 @@ section#case-studies {
 
   display: flex;
   position: relative;
+  z-index: 0;
 }
 
 
